--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         b.style.height = c + "px";
         b.style.marginTop = Math.random() * 1080 - c / 2 + "px";
-        b.style.transform = `translateX(-${c + c / 2}px)`;
+        b.style.transform = `translateX(-${c * 2}px)`;
         a.append(b);
         setTimeout(() => {
           b.style.marginLeft = 1920 + c * 2 + "px";
