--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Dynamic wallpaper</title>
     <style>
       body {
         width: 100vw;
@@ -29,6 +29,7 @@
           top: 0;
           backdrop-filter: blur(200px);
           font-family: Arial, Helvetica, sans-serif;
+          z-index: 10000;
         }
       }
     </style>
@@ -37,10 +38,14 @@
     <div id="effect"></div>
     <div class="cover">
       <input type="color" name="" id="color" value="#ff00ff" />
+      <span id="count"></span>
     </div>
     <script>
       const a = document.getElementById("effect");
       const d = document.getElementById("color");
+      const g = document.getElementById("count");
+      let e = 0,
+        f = 0;
       setInterval(() => {
         const b = document.createElement("div");
         b.classList.add("dot");
@@ -65,18 +70,21 @@
         b.style.background = `rgb(${averageR}, ${averageG}, ${averageB})`;
         const c = Math.round(Math.random() * 2000);
         b.style.transition = `all ${c / 50}s`;
-
         b.style.width = c + "px";
-
         b.style.height = c + "px";
-        b.style.marginTop = Math.random() * 1080 - c / 2 + "px";
+        b.style.marginTop = Math.random() * window.innerHeight - c / 2 + "px";
         b.style.transform = `translateX(-${c * 2}px)`;
         a.append(b);
+        e++;
+        f = 0;
+        document.querySelectorAll(".dot").forEach(() => {
+          f++;
+        });
+        g.innerText = `${f} Current Objects / ${e} Total Spawned`;
         setTimeout(() => {
           b.style.marginLeft = window.innerWidth + c * 2 + "px";
           setInterval(() => {
             b.remove();
-            console.log("working");
           }, (c / 5) * 100 + c / 2);
         }, 100);
       }, Math.round(Math.random() * 1000));
