--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         // Apply the calculated RGB values to the background style
         b.style.background = `rgb(${averageR}, ${averageG}, ${averageB})`;
-        const c = Math.round(Math.random() * 2000);
+        const c = Math.round(Math.random() * (window.innerWidth * 2));
         b.style.transition = `all ${c / 50}s`;
         b.style.width = c + "px";
         b.style.height = c + "px";
