--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
           height: 100vh;
           position: fixed;
           top: 0;
-          backdrop-filter: blur(100px);
           font-family: Arial, Helvetica, sans-serif;
           color: white;
         }
@@ -49,13 +48,16 @@
   </head>
   <body>
     <div id="effect"></div>
-    <div class="cover"></div>
+    <div class="cover" id="filter"></div>
     <div class="controls">
       Color
       <input type="color" name="" id="color" value="#00ffff" />
       <br />
       interval:
       <input type="number" name="" id="number" value="1000" />
+      <br />
+      Blur Amount:
+      <input type="number" name="" id="blur" value="100" />
       <br />
       Limit:
       <input type="number" name="" id="limit" value="100" />
@@ -67,11 +69,16 @@
       const g = document.getElementById("count");
       const k = document.getElementById("number");
       const n = document.getElementById("limit");
+      const o = document.getElementById("blur");
+      const p = document.getElementById("filter");
       var i = new Date(),
         l;
       let e = 0,
         f = 0,
         m = 0;
+      o.addEventListener("input", () => {
+        p.style.backdropFilter = `blur(${o.value}px)`;
+      });
       function runEffect() {
         var h = new Date();
         var j = 1000 / (h - i);
@@ -130,14 +137,10 @@
 
       setInterval(() => {
         if (m != k.value) {
-          console.log("WORKING");
           m = k.value;
           try {
             clearInterval(l);
-            console.log("WORKINGG");
-          } catch {
-            console.log("NOT WORKING");
-          }
+          } catch {}
           l = setInterval(runEffect, Math.round(Math.random() * m));
         } else {
         }
