remove all button

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
       Limit:
       <input type="number" name="" id="limit" value="100" />
       <div id="count"></div>
+      <button onclick="document.getElementById('effect').innerHTML=''">
+        Remove all objects
+      </button>
     </div>
     <script>
       const a = document.getElementById("effect");
