--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           top: 0;
           font-family: Arial, Helvetica, sans-serif;
           color: white;
+          background: red;
         }
         .controls {
           top: 0;
