--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
       >
         add text
       </button>
-      <input type="text" name="" id="text-text" value="Atheistic" />
+      <input type="text" name="" id="text-text" value="Asthmatic" />
     </div>
-    <div class="text"><div id="text-ele">Atheistic</div></div>
+    <div class="text"><div id="text-ele">Asthmatic</div></div>
     <script>
       const a = document.getElementById("effect");
       const d = document.getElementById("color");
