--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         g.innerHTML = `<br>${f} Current Objects <br>${e} Total Spawned <br>${Math.round(
           j
         )} Dots Per Second <br> Current Color rgb(${averageR}, ${averageG}, ${averageB})`;
-
+        document.head.title.innerText = `HOVER TOP LEFT - ${f}`;
         if (f > n.value - 1) {
           return "TOO MUCH";
         }
