--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         #effect {
           width: 100vw;
           height: 100vh;
+overflow:hidden;
           .dot {
             height: 100px;
             position: absolute;
