--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title id="title"></title>
     <style>
+*{overflow:hidden;}
       body {
         width: 100vw;
         height: 100vh;
@@ -15,7 +16,6 @@
         #effect {
           width: 100vw;
           height: 100vh;
-overflow:hidden;
           .dot {
             height: 100px;
             position: absolute;
