--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           height: 100vh;
           .dot {
             height: 100px;
-            position: absolute;
+            position: fixed;
             border-radius: 500px;
             z-index: 0;
           }
