--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         #effect {
           width: 100vw;
           height: 100vh;
+          position: relative;
           .dot {
             height: 100px;
-            position: fixed;
+            position: absolute;
             border-radius: 500px;
             z-index: 0;
           }
