--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         b.style.width = c + "px";
         b.style.height = c + "px";
         b.style.borderRadius = c + "px";
-        b.style.marginTop = Math.random() * window.innerHeight - c / (Math.random()*2)+1+ "px";
+        b.style.marginTop = Math.random() * window.innerHeight - c + "px";
         b.style.transform = `translateX(-${c}px)`;
         a.append(b);
         setTimeout(() => {
