--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         #effect {
           width: 100vw;
           height: 100vh;
-          position: relative;
           .dot {
             height: 100px;
-            position: absolute;
+            position: fixed;
             border-radius: 500px;
             z-index: 0;
           }
