--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           top: 0;
           right:0;
           width: 100vw;
-          height: 100vh;
+          height: 100%;
           background-color: rgba(255, 0, 0, 0);
           position: fixed;
           backdrop-filter: blur(200px);
