--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
           top: 0;
           right:0;
           width: 100vw;
-          height: 100%;
+          height: 100vh;
+          .inner {
+          width:100vw;
+height:100vh;,,,
           background-color: rgba(255, 0, 0, 0);
           position: fixed;
           backdrop-filter: blur(200px);
@@ -34,6 +37,7 @@
           font-family: Arial, Helvetica, sans-serif;
           color: white;
           z-index: 1;
+          }
         }
         .controls {
           top: 0;
