--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@ height:100vh;,,,
   </head>
   <body>
     <div id="effect"></div>
-    <div class="cover" id="filter" style="backdrop-filter: blur(100px)"></div>
+    <div class="cover" id="filter" style="backdrop-filter: blur(100px)">
+<div class="inner"></div>
+</div>
     <div class="controls">
       Color <span id="color-t"></span>
       <input type="color" name="" id="color" value="#ff00ff" />
