--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           height: 100vh;
           background-color: rgba(255, 0, 0, 0);
           position: fixed;
+          -webkit-backdrop-filter:blur(50px);
           backdrop-filter: blur(50px);
           -webkit-backdrop-filter: blur(200px);
           font-family: Arial, Helvetica, sans-serif;
