--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
           font-family: Arial, Helvetica, sans-serif;
           color: white;
           z-index: 1;
+-webkit-backdrop-filter: blur(50px);
         }
     </style>
   </head>
