--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
           background-color: rgba(255, 0, 0, 0);
           position: fixed;
           -webkit-backdrop-filter:blur(50px);
+          filter:blur(50px);
           backdrop-filter: blur(50px);
-          -webkit-backdrop-filter: blur(200px);
           font-family: Arial, Helvetica, sans-serif;
           color: white;
           z-index: 1;
--webkit-backdrop-filter: blur(50px);
+      
         }
     </style>
   </head>
