--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
       Speed
       <input type="number" id="speed" value="8000" />
       <br />
+      Scale
+      <input type="number" name="" id="scale" value="100" />
+      <br />
       Variance (0-100):
       <input type="number" name="" min="0" max="100" value="75" id="variance" />
       <div id="count"></div>
@@ -134,7 +137,8 @@
       const u = document.getElementById("title");
       const v = document.getElementById("color-2");
       const w = document.getElementById("color-t-2");
-      let t;
+      const x = document.getElementById("scale");
+      let t, y;
       function toggleFullScreen() {
         var doc = window.document;
         var docEl = doc.documentElement;
@@ -222,19 +226,24 @@
         } else {
           t = s.value;
         }
+        if (x.value == 100) {
+          y = c;
+        } else {
+          y = (c * x.value) / 100;
+        }
         b.style.transition = `all ${t}ms linear`;
-        b.style.width = c + "px";
-        b.style.height = c + "px";
-        b.style.borderRadius = c + "px";
+        b.style.width = y + "px";
+        b.style.height = y + "px";
+        b.style.borderRadius = y + "px";
         const getRandomNumber = (min, max) => {
           return Math.random() * (max - min) + min;
         };
         b.style.marginTop =
-          getRandomNumber(0 - c / 2, window.innerHeight + c / 2) + "px";
-        b.style.transform = `translateX(-${c}px)`;
+          getRandomNumber(0 - y / 2, window.innerHeight + y / 2) + "px";
+        b.style.transform = `translateX(-${y}px)`;
         a.append(b);
         setTimeout(() => {
-          b.style.marginLeft = window.innerWidth + c + "px";
+          b.style.marginLeft = window.innerWidth + y + "px";
           setInterval(() => {
             b.remove();
           }, t);
