--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         g.innerHTML = `<br>${f} Current Objects <br>${e} Total Spawned <br>${Math.round(
           j
         )} Dots Per Second <br> Current Color rgb(${averageR}, ${averageG}, ${averageB})`;
-        document.body.style.background = `rgb(${averageR}, ${averageG}, ${averageB})`;
+        //document.body.style.background = `rgb(${averageR}, ${averageG}, ${averageB})`;
         if (f > n.value - 1) {
           return "TOO MUCH";
         }
